2005-05-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/winicon/icoload.[ch]
	* plug-ins/winicon/main.c: code cleanup, prepare for thumbnail
	loading.

2005-05-06  Sven Neumann  <sven@gimp.org>

	* app/actions/layers-actions.c
	* app/core/gimpimage.c (gimp_image_position_layer)
	* app/widgets/gimplayertreeview.c (gimp_layer_tree_view_drop_possible):
	drop the limitation that layers not at the bottom of the stack
	have to have an alpha channel. Allow the user to move the
	background layer up in the stack or reposition it using DND.

	* tips/gimp-tips.xml.in: changed the relevant tip and some more.

2005-05-06  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/compressor.c: use G_DIR_SEPARATOR instead of '/'.

	* plug-ins/common/mail.c: ditto. Fixed some coding style issues.
	Special case .bz2 files just as .gz ones.

2005-05-06  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-merge.c: removed redundant casts.

2005-05-06  Michael Natterer  <mitch@gimp.org>

	* app/actions/gradient-editor-commands.h: added enum for the
	"load_color" actions.

	* app/actions/gradient-editor-actions.c
	* app/actions/gradient-editor-commands.c: use the new enum instead
	of magic values, cleanup.

	* app/actions/palette-editor-commands.c: cleanup.

	* app/widgets/gimpbrusheditor.c
	* app/widgets/gimpdataeditor.c: cleanup.

	* app/widgets/gimpgradienteditor.c: added GtkObject::destroy() and
	GtkWidget::unmap() implementations which destroy the color dialog.
	Destroy color dialogs by cancelling them via gtk_dialog_response(),
	so temporarily changed colors are restored correctly. Refactored
	my last commit below a bit. Various cleanups.

	* app/widgets/gimppaletteeditor.[ch]: no need to remember the
	buttons in the GimpPaletteEditor struct.

2005-05-06  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-scale.c
	(gimp_display_shell_scale_by_values): abort early if the values are
	all setup already. Fixes bug #164281.

2005-05-06  Sven Neumann  <sven@gimp.org>
