@@ -1,5 +1,11 @@
 2005-05-07  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/winicon/icoload.c
+	* plug-ins/winicon/main.c: added a thumbnail loader for .ico files
+	Fixes bug #158191.
+
+2005-05-07  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/winicon/icoload.[ch]
 	* plug-ins/winicon/main.c: code cleanup, prepare for thumbnail
 	loading.
